--- a/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
+++ b/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
@@ -6,7 +6,6 @@
       "name": "CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDQjhEX6D2qajYoMB0RWSp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,7 @@
         "id": "hBKRgU7umgYm"
       },
       "source": [
-        "# ** Drug Discovery [Section 5] Comparing Regressors**\n",
+        "# **Drug Discovery [Part 5] Comparing Regressors**\n",
         "\n"
       ]
     },
@@ -59,7 +58,7 @@
       "source": [
         "! pip install lazypredict"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +110,7 @@
         "import lazypredict\n",
         "from lazypredict.Supervised import LazyRegressor"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +143,7 @@
       "source": [
         "! wget https://github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +177,7 @@
       "source": [
         "df = pd.read_csv('acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +189,7 @@
         "X= df.drop('pIC50', axis=1)\n",
         "Y = df.pIC50"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +214,7 @@
         "# Examine X dimension\n",
         "X.shape"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +244,7 @@
         "X= selection.fit_transform(X)\n",
         "X.shape"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +267,7 @@
         "# Perform data splitting using 80/20 ratio\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +294,7 @@
         "models_train,predictions_train = clf.fit(X_train, X_train, Y_train, Y_train)\n",
         "models_test,predictions_test = clf.fit(X_train, X_test, Y_train, Y_test)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +320,7 @@
         "# Performance table of the training set (80% subset)\n",
         "predictions_train"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,6 +723,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pRpfcTTsd2mm"
+      },
+      "source": [
+        "#  **5. Data Visualization**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -745,7 +753,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"R-Squared\", data=predictions_train)\n",
         "ax.set(xlim=(0, 1))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +799,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"RMSE\", data=predictions_train)\n",
         "ax.set(xlim=(0, 10))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +843,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"Time Taken\", data=predictions_train)\n",
         "ax.set(xlim=(0, 10))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
