--- a/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
+++ b/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
@@ -136,6 +136,7 @@
         "id": "FxaYahRYZJGH"
       },
       "source": [
+        "Import necessary libraries\n",
         "import pandas as pd\n",
         "from chembl_webresource_client.new_client import new_client"
       ],
@@ -148,7 +149,7 @@
         "id": "hX9wAq7JZ2q4"
       },
       "source": [
-        "# **Search for Target protein**"
+        "## **Search for Target protein**"
       ]
     },
     {
@@ -157,7 +158,7 @@
         "id": "BH9Gl2yIvUvz"
       },
       "source": [
-        "Target search for Acetylcholinesterae"
+        "### **Target search for Acetylcholinesterae**"
       ]
     },
     {
@@ -171,6 +172,7 @@
         "outputId": "6514cdb5-b24b-4147-e96f-99e87fed00ec"
       },
       "source": [
+        "# Target search for Human Acetylcholinesterase\n",
         "target = new_client.target\n",
         "target_query = target.search('acetylcholinesterase')\n",
         "targets = pd.DataFrame.from_dict(target_query)\n",
@@ -590,7 +592,7 @@
       },
       "source": [
         "\n",
-        "Here, we will retrieve only bioactivity data for coronavirus 3C-like proteinase (CHEMBL3927) that are reported as IC 50  values in nM (nanomolar) unit.\n",
+        "Here, we will retrieve only bioactivity data for *Human Acetylcholinesterase* (CHEMBL220) that are reported as IC50  values in nM (nanomolar) unit.\n",
         "\n"
       ]
     },
