--- a/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
+++ b/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
@@ -136,7 +136,7 @@
         "id": "FxaYahRYZJGH"
       },
       "source": [
-        "Import necessary libraries\n",
+        "# Import necessary libraries\n",
         "import pandas as pd\n",
         "from chembl_webresource_client.new_client import new_client"
       ],
