--- a/CDD_ML_Section_4_Acetylcholinesterase_Regression_Random_Forest.ipynb
+++ b/CDD_ML_Section_4_Acetylcholinesterase_Regression_Random_Forest.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# ** Drug Discovery [section 4] Regression Models with Random Forest**\n",
+    "# ** Drug Discovery [Part 4] Regression Models with Random Forest**\n",
     "\n"
    ]
   },
