--- a/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
+++ b/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
@@ -25,15 +25,22 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "tu7AofcAZwFY"
+        "id": "8ssfWGyaSXL9"
       },
       "source": [
-        "#part3"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# **Descriptor Calculation and Dataset Preparation**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lhRB9CpDg7G-"
+      },
+      "source": [
+        "**1.DOWNLOADING PaDEL-DESCRIPTOR**"
+      ]
     },
     {
       "cell_type": "code",
@@ -48,7 +55,7 @@
         "! wget https://github.com/dataprofessor/bioinformatics/raw/master/padel.zip\n",
         "! wget https://github.com/dataprofessor/bioinformatics/raw/master/padel.sh"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +109,7 @@
       "source": [
         "! unzip padel.zip"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,9 +298,10 @@
         "outputId": "5392e678-adc6-4d16-9d64-777d4a71042b"
       },
       "source": [
+        "# downloading ChEMBL bioactivity data that has been pre-processed from Parts 1 and 2 \n",
         "! wget https://raw.githubusercontent.com/dataprofessor/data/master/acetylcholinesterase_04_bioactivity_data_3class_pIC50.csv"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +330,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +341,7 @@
       "source": [
         "df3 = pd.read_csv('acetylcholinesterase_04_bioactivity_data_3class_pIC50.csv')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +357,7 @@
       "source": [
         "df3"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +562,7 @@
         "df3_selection = df3[selection]\n",
         "df3_selection.to_csv('molecule.smi', sep='\\t', index=False, header=False)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +577,7 @@
       "source": [
         "! cat molecule.smi | head -5"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +604,7 @@
       "source": [
         "! cat molecule.smi | wc -l"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,6 +613,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GMXZSLGoWHWR"
+      },
+      "source": [
+        "**2. CALCULATE FINGERPRINT DESCRIPTORS**"
       ]
     },
     {
@@ -619,7 +636,7 @@
       "source": [
         "! cat padel.sh"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,17 +650,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jOrAJso5hU3H"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -653,7 +659,7 @@
       "source": [
         "! bash padel.sh"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5371,7 +5377,7 @@
       "source": [
         "! ls -l"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5391,6 +5397,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t_OMb0J_XBVt"
+      },
+      "source": [
+        "**3. PREPARING X AND Y DATA MATRICES**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tiX6WYh5XWO2"
+      },
+      "source": [
+        "**X DATA MATRIX**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "isemsPewK_AE"
@@ -5398,7 +5422,7 @@
       "source": [
         "df3_X = pd.read_csv('descriptors_output.csv')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5414,7 +5438,7 @@
       "source": [
         "df3_X"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6487,7 +6511,7 @@
         "df3_X = df3_X.drop(columns=['Name'])\n",
         "df3_X"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7547,6 +7571,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eteMwjI1Xv0L"
+      },
+      "source": [
+        "**Y VARIABLE** "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -7556,10 +7589,11 @@
         "outputId": "60192749-bc6f-4259-d7d8-80ccdff436c9"
       },
       "source": [
+        "# Convert IC50 to pIC50\n",
         "df3_Y = df3['pIC50']\n",
         "df3_Y"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7595,10 +7629,11 @@
         "outputId": "c36c2f5e-7cdb-421b-c088-b258692b8637"
       },
       "source": [
+        "# Combining X and Y variable \n",
         "dataset3 = pd.concat([df3_X,df3_Y], axis=1)\n",
         "dataset3"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8665,7 +8700,7 @@
       "source": [
         "dataset3.to_csv('acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv', index=False)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     }
   ]
