--- a/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
+++ b/CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "CDD_ML_Part_1_Acetylcholinesterase_Bioactivity_Data_Concised.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0FpGM5EvM2OCbH/KRa81c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,18 +38,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dyp_JBYnuH_l"
-      },
-      "source": [
-        "## **ChEMBL Database**\n",
-        "\n",
-        "The [*ChEMBL Database*](https://www.ebi.ac.uk/chembl/) is a database that contains curated bioactivity data of more than 2 million compounds. It is compiled from more than 76,000 documents, 1.2 million assays and the data spans 13,000 targets and 1,800 cells and 33,000 indications.\n",
-        "[Data as of March 25, 2020; ChEMBL version 26]."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_4lTFbw7ulGE"
       },
       "source": [
@@ -76,7 +63,7 @@
         "outputId": "f62865be-fc17-4a0f-81fd-fd9704b046b8"
       },
       "source": [
-        "! pip install chembl_webresource_client\n"
+        "! pip install chembl_webresource_client"
       ],
       "execution_count": null,
       "outputs": [
@@ -127,7 +114,7 @@
         "id": "7_GIURtuvJ2n"
       },
       "source": [
-        "# **Importing** **libraries**"
+        "# ***Importing libraries***"
       ]
     },
     {
@@ -140,17 +127,8 @@
         "import pandas as pd\n",
         "from chembl_webresource_client.new_client import new_client"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hX9wAq7JZ2q4"
-      },
-      "source": [
-        "## **Search for Target protein**"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -158,7 +136,9 @@
         "id": "BH9Gl2yIvUvz"
       },
       "source": [
-        "### **Target search for Acetylcholinesterae**"
+        "# ***Target search for Acetylcholinesterase***\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -178,7 +158,7 @@
         "targets = pd.DataFrame.from_dict(target_query)\n",
         "targets"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +529,7 @@
         "id": "Ih-A-iVVvkzn"
       },
       "source": [
-        "# **Select and retrieve bioactivity data for Human Acetylcholinesterase(fifth entry)**"
+        "# ***Select and retrieve bioactivity data for Human Acetylcholinesterase***"
       ]
     },
     {
@@ -566,7 +546,7 @@
         "selected_target = targets.target_chembl_id[0]\n",
         "selected_target"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,17 +566,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OdUz8ysWvpd0"
-      },
-      "source": [
-        "\n",
-        "Here, we will retrieve only bioactivity data for *Human Acetylcholinesterase* (CHEMBL220) that are reported as IC50  values in nM (nanomolar) unit.\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "d9b0b_eOkS0a"
@@ -605,7 +574,7 @@
         "activity = new_client.activity\n",
         "res = activity.filter(target_chembl_id=selected_target).filter(standard_type=\"IC50\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +585,7 @@
       "source": [
         "df = pd.DataFrame.from_dict(res)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +601,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,23 +1231,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "V8XSq0IUv9mw"
-      },
-      "source": [
-        "Finally we will save the resulting bioactivity data to a CSV file bioactivity_data.csv."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "NglBqmbDkotn"
       },
       "source": [
+        "#saving bioactivity data to csv file\n",
         "df.to_csv('acetylcholinesterase_01_bioactivity_data_raw.csv', index=False)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1287,8 +1248,7 @@
         "id": "adHuSm0Uwfrk"
       },
       "source": [
-        "# **Handling missing data**\n",
-        "If any compounds has missing value for the standard_value and canonical_smiles column then drop it."
+        "# ***Handling missing data***"
       ]
     },
     {
@@ -1302,11 +1262,12 @@
         "outputId": "c92db205-6226-4679-fe02-1ab0af99d34d"
       },
       "source": [
+        "#drop missing values\n",
         "df2 = df[df.standard_value.notna()]\n",
         "df2 = df2[df.canonical_smiles.notna()]\n",
         "df2"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1955,7 +1916,7 @@
       "source": [
         "len(df2.canonical_smiles.unique())"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1985,7 +1946,7 @@
         "df2_nr = df2.drop_duplicates(['canonical_smiles'])\n",
         "df2_nr"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2620,9 +2581,7 @@
         "id": "wtySmuPww_Iu"
       },
       "source": [
-        "## **Data pre-processing of the bioactivity data**\n",
-        "\n",
-        "### **Combine the 3 columns (molecule_chembl_id,canonical_smiles,standard_value) and bioactivity_class into a DataFrame**\n"
+        "# ***Data pre-processing of the bioactivity data***\n"
       ]
     },
     {
@@ -2636,11 +2595,12 @@
         "outputId": "06ea19aa-10bb-4277-d4aa-31f81c1916d0"
       },
       "source": [
+        "#combining chembl id, canonical smiles, standard value and bioactivity class into a dataframe\n",
         "selection = ['molecule_chembl_id','canonical_smiles','standard_value']\n",
         "df3 = df2_nr[selection]\n",
         "df3"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2766,33 +2726,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P3DSKMv5LtUB"
-      },
-      "source": [
-        "Saves dataframe to CSV file"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZifMMw5GxFXo"
-      },
-      "source": [
-        "Labeling compounds as either being active, inactive or intermediate\n",
-        "The bioactivity data is in the IC50 unit. Compounds having values of less than 1000 nM will be considered to be active while those greater than 10,000 nM will be considered to be inactive. As for those values in between 1,000 and 10,000 nM will be referred to as intermediate."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "EdNeAywJsW2t"
       },
       "source": [
+        "#separating data into categories according to bioactivity threshold\n",
         "bioactivity_class = []\n",
         "for i in df4.standard_value:\n",
-        "  if float(i) >= 10000:\n",
+        "  if float(i) >= 10000:           #value in nM\n",
         "    bioactivity_threshold.append(\"inactive\")\n",
         "  elif float(i) <= 1000:\n",
         "    bioactivity_threshold.append(\"active\")\n",
@@ -2801,15 +2743,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "t7_gaq-zyFyb"
-      },
-      "source": [
-        "### **Combine the 3 columns (molecule_chembl_id,canonical_smiles,standard_value) and bioactivity_class into a DataFrame**"
-      ]
     },
     {
       "cell_type": "code",
@@ -2822,7 +2755,6 @@
         "outputId": "a061bc56-e5ff-40b8-e1c5-8930db3a0be1"
       },
       "source": [
-        "selection = ['molecule_chembl_id','canonical_smiles','standard_value']\n",
         "df3 = df2_nr[selection]\n",
         "df3"
       ],
@@ -2952,35 +2884,16 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kCXtMXSgKRdn"
-      },
-      "source": [
-        "# Save dataframe to CSV file \n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "55UNWGxJKRFd"
       },
       "source": [
+        "#saving dataframe to csv file\n",
         "df3.to_csv('acetylcholinesterase_02_bioactivity_data_preprocessed.csv', index=False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J_7LaEfyKjRn"
-      },
-      "source": [
-        "**Labeling compounds as either being active, inactive or intermediate**\n",
-        "\n",
-        "The bioactivity data is in the IC50 unit. Compounds having values of less than 1000 nM will be considered to be active while those greater than 10,000 nM will be considered to be inactive. As for those values in between 1,000 and 10,000 nM will be referred to as intermediate.\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -2988,10 +2901,9 @@
         "id": "8k67kHmaKjBJ"
       },
       "source": [
-        "\n",
         "df4 = pd.read_csv('acetylcholinesterase_02_bioactivity_data_preprocessed.csv')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3009,7 +2921,7 @@
         "  else:\n",
         "    bioactivity_threshold.append(\"intermediate\")"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3027,7 +2939,7 @@
         "df5 = pd.concat([df4, bioactivity_class], axis=1)\n",
         "df5"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3172,7 +3084,7 @@
       "source": [
         "df5.to_csv('acetylocholinesterase_03_bioactivity_data_curated.csv', index=False)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3187,7 +3099,7 @@
       "source": [
         "! zip acetylcholinesterase.zip *.csv"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3212,7 +3124,7 @@
       "source": [
         "! ls -l"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
