--- a/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
+++ b/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
@@ -30,16 +30,16 @@
         "id": "8ssfWGyaSXL9"
       },
       "source": [
-        "# **Descriptor Calculation and Dataset Preparation**"
+        "# ***Descriptor Calculation and Dataset Preparation***"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lhRB9CpDg7G-"
+        "id": "sItRBFbLm4e-"
       },
       "source": [
-        "**1.DOWNLOADING PaDEL-DESCRIPTOR**"
+        "# ***1. Download PADEL-descriptor***"
       ]
     },
     {
@@ -621,7 +621,7 @@
         "id": "GMXZSLGoWHWR"
       },
       "source": [
-        "**2. CALCULATE FINGERPRINT DESCRIPTORS**"
+        "# ***2. Calculate fingerprint descriptors***"
       ]
     },
     {
@@ -5402,7 +5402,7 @@
         "id": "t_OMb0J_XBVt"
       },
       "source": [
-        "**3. PREPARING X AND Y DATA MATRICES**"
+        "# ***3. Prepare X and Y Matrices***"
       ]
     },
     {
@@ -7576,7 +7576,7 @@
         "id": "eteMwjI1Xv0L"
       },
       "source": [
-        "**Y VARIABLE** "
+        "**Y MATRIX** "
       ]
     },
     {
