--- a/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
+++ b/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
@@ -30,7 +30,7 @@
         "id": "8ssfWGyaSXL9"
       },
       "source": [
-        "# ***Descriptor Calculation and Dataset Preparation***"
+        "# ***Part 3: Descriptor Calculation and Dataset Preparation***"
       ]
     },
     {
